fixed logo alignment and responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,7 +460,11 @@ footer .footer-logo-container {
   font-family: "Shrikhand", sans-serif;
   font-size: 18px;
   margin: 0 auto;
-  text-align: center;
+}
+@media (min-width: 992px) {
+  footer .footer-logo-container {
+    text-align: center;
+  }
 }
 footer .footer-links-container {
   padding-left: 0;
